--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,9 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+
 //= template/header.html
+
 <section class="content">
 
     <div class="container-fluid">
@@ -28,6 +30,22 @@
     </div>
 
 </section>
+
+<!-- Modal -->
+<div class="modal fade" id="modalProd" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title"></h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body"></div>
+        </div>
+    </div>
+</div>
+
 //= template/footer.html
 
 
