--- a/src/index.html
+++ b/src/index.html
@@ -17,10 +17,17 @@
         <input type="text" class="form-control quicksearch mb-3" placeholder="Name">
 
         <h3>Sort</h3>
-        <div id="sorts" class="btn-group mb-4">
-            <button class="btn badge-success" data-sort-by="id">ID</button>
+        <div id="sorts" class="btn-group mb-3">
+            <button class="btn badge-secondary" data-sort-by="id">ID</button>
             <button class="btn badge-secondary" data-sort-by="name">Name</button>
             <button class="btn badge-secondary" data-sort-by="description">Description</button>
+        </div>
+
+        <div class="mb-4">
+            <div id="ascDesc" class="btn-group">
+                <button class="btn badge-secondary" data-sort-direction="asc">Asc</button>
+                <button class="btn badge-secondary" data-sort-direction="desc">Desc</button>
+            </div>
         </div>
 
         <div class="grid">
@@ -41,7 +48,10 @@
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-            <div class="modal-body"></div>
+            <div class="modal-body">
+                <div class="modal-img"></div>
+                <div class="modal-description"></div>
+            </div>
         </div>
     </div>
 </div>
